<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.charliequinn.thescene.Activities.CreateAccount">



    <EditText
        android:id="@+id/createUsernameEntry"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:lines="1"
        android:background="@drawable/login_button"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/pw_hint"
        android:id="@+id/createPasswordEntry"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:lines="1"
        android:background="@drawable/login_button"
        android:layout_below="@+id/createEmailEntry"
         />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/create_account"
        android:background="@drawable/create_account_button"
        android:textColor="#ffffff"
        android:onClick="actionCreateAccount"
        android:layout_below="@+id/createConfirmPasswordEntry" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@id/create_account_button"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:layout_marginTop="100dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"/>

    <EditText
        android:id="@+id/createEmailEntry"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email_hint"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:lines="1"
        android:background="@drawable/login_button"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/createUsernameEntry"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_pw_hint"
        android:id="@+id/createConfirmPasswordEntry"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:lines="1"
        android:background="@drawable/login_button"
        android:layout_below="@+id/createPasswordEntry" />


</RelativeLayout>
