<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.charliequinn.thescene.Activities.LoginActivity">

    <ImageView
        android:id="@+id/iconpic"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/icon_wandr2"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_below="@+id/iconpic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:background="@drawable/login_button"
            android:textColor="#4E92DF"
            android:onClick="logIn"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/login_w_fb_button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:text="@string/login_w_fb_button"
            android:background="@drawable/login_fb_button"
            android:textColor="#ffffff"
            android:onClick="enterNumber"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="@drawable/create_account_button"
            android:textColor="#ffffff"
            android:onClick="createAccount"
            android:layout_below="@+id/login_w_fb_button"
            android:layout_alignLeft="@+id/login_w_fb_button"
            android:layout_alignStart="@+id/login_w_fb_button" />

    </LinearLayout>



</RelativeLayout>
