<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.charliequinn.thescene.Fragments.MapFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_above="@+id/search_bar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp" >

        </com.google.android.gms.maps.MapView>

        <!--<fragment-->
            <!--android:id="@+id/place_autocomplete_fragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
            <!--/>-->

        <Button
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="Search"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorSearchBarGrey"
            android:onClick="findPlace"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/map_unfiltered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/round_button"
                android:text="@string/all"/>
            <Button
                android:id="@+id/restaurant_button"
                android:background="@android:color/transparent"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/restaurants"
                android:onClick="restaurantPlace"/>
            <Button
                android:id="@+id/bar_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/bars"
                style="?android:attr/borderlessButtonStyle"
                android:background="@android:color/transparent"/>
            <Button
                android:id="@+id/shop_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/shopping"
                android:background="@android:color/transparent"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <ListView
            android:id="@+id/near_places"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

        </ListView>

    </LinearLayout>


</FrameLayout>
